--- a/libtextstyle/.gitignore
+++ b/libtextstyle/.gitignore
@@ -55,6 +55,7 @@
 /lib/float+.h
 /lib/float.c
 /lib/float.in.h
+/lib/fstat.c
 /lib/fsync.c
 /lib/full-write.c
 /lib/full-write.h
@@ -95,6 +96,8 @@
 /lib/limits.in.h
 /lib/log10.c
 /lib/malloc.c
+/lib/malloca.c
+/lib/malloca.h
 /lib/math.c
 /lib/math.in.h
 /lib/memchr.c
@@ -113,6 +116,7 @@
 /lib/obstack.h
 /lib/ostream.oo.c
 /lib/ostream.oo.h
+/lib/pathmax.h
 /lib/printf-args.c
 /lib/printf-args.h
 /lib/printf-parse.c
@@ -134,6 +138,11 @@
 /lib/sigprocmask.c
 /lib/size_max.h
 /lib/snprintf.c
+/lib/stat.c
+/lib/stat-time.c
+/lib/stat-time.h
+/lib/stat-w32.c
+/lib/stat-w32.h
 /lib/stdarg.in.h
 /lib/stdbool.in.h
 /lib/stddef.in.h
@@ -149,6 +158,7 @@
 /lib/styled-ostream.oo.c
 /lib/styled-ostream.oo.h
 /lib/sys-limits.h
+/lib/sys_stat.in.h
 /lib/sys_types.in.h
 /lib/term-ostream.oo.c
 /lib/term-ostream.oo.h
@@ -461,6 +471,8 @@ core
 /lib/stdlib.h-t
 /lib/string.h
 /lib/string.h-t
+/lib/sys/stat.h
+/lib/sys/stat.h-t
 /lib/sys/types.h
 /lib/sys/types.h-t
 /lib/textstyle/stdbool.h-t
