--- a/gettext-tools/examples/hello-c++-qt/po/Makefile.am
+++ b/gettext-tools/examples/hello-c++-qt/po/Makefile.am
@@ -104,7 +104,8 @@ SUFFIXES = .po .qm .sed .sin .nop .po-create .po-update
 # the .pot file. This eliminates the need to update the .po files when the
 # .pot file has changed, which would be troublesome if the .po files are put
 # under version control.
-.po.qm: $(srcdir)/$(DOMAIN).pot
+$(QMFILES): $(srcdir)/$(DOMAIN).pot
+.po.qm:
 	@lang=`echo $* | sed -e 's,.*/,,'`; \
 	test "$(srcdir)" = . && cdcmd="" || cdcmd="cd $(srcdir) && "; \
 	echo "$${cdcmd}rm -f $${lang}.qm && $(MSGMERGE) $(MSGMERGE_FOR_MSGFMT_OPTION) -o $${lang}.1po $${lang}.po $(DOMAIN).pot && $(GMSGFMT) -c --qt --statistics --verbose -o $${lang}.qm $${lang}.1po && rm -f $${lang}.1po"; \
